Fix right white space when viewing in mobile devs

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    overflow-x: hidden; /*get rid of the white side when scrolling horizontally*/
 }
 
 .clr {
